--- a/views/team.erb
+++ b/views/team.erb
@@ -3,12 +3,19 @@
  <head>
   <meta charset="UTF-8">
   <title>Basketball Team</title>
+  <body>
+  <h1>Basketball Team!</h1>
+ Team Name: <%= @team %>
+ Coach: <%= @coach %>
+ Point Guard: <%= @pg %>
+ Shooting Guard: <%= @sg %>
+ Small Forward: <%= @sf %>
+ Power Forward: <%= @pf %>
+ Center: <%= @c %>
+  </form>
+</body>
  </head>
- <body>
- 
 
-
- </body>
 </html>
 
 
