--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
  <head>
+ <style> #Submit {color: black;}</style>
   <meta charset="UTF-8">
   <title>Basketball Team Signup</title>
  </head>
  <body>
+     <form method="POST" action="/team">
+       <p>Team Name:<input name="name" type="text"></p>
+        <p>Caoch:<input name="coach" type="text"></p>
+        <p>Point Gaurd:<input name="pg" type="text"></p>
+        <input name="sg" type="text">
+        <input name="pf" type="text">
+        <input name="sf" type="text">
+        <input name="c" type="text">
+        <input type="submit" id="Submit">
+    </form>
  </body>
 </html>
 
