--- a/views/team.erb
+++ b/views/team.erb
@@ -5,9 +5,15 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
-
-
+ <%# {"Team_Name"=>"a", "Coach"=>"a", "Point_Guard"=>"a", "Shooting_Guard"=>"a",
+  "Small_Forward"=>"a", "Power_Forward"=>"a", "Center"=>"a"} %>
+  <h1>Team Name: <%=params[:name]%></h1>
+  <h2>Coach: <%=params[:coach]%></h2>
+  <h2>Point Guard: <%=params[:pg]%></h2>
+  <h2>Shooting Guard: <%=params[:sg]%></h2>
+  <h2>Small Forward: <%=params[:sf]%></h2>
+  <h2>Power Forward: <%=params[:pf]%></h2>
+  <h2>Center: <%=params[:c]%></h2>
  </body>
 </html>
 
