--- a/views/team.erb
+++ b/views/team.erb
@@ -2,13 +2,16 @@
 <html>
  <head>
   <meta charset="UTF-8">
-  <title>Basketball Team</title>
+  <title>Create A Basketball Team</title>
  </head>
  <body>
- 
-
-
+    <h1>BASKETBALL TEAM<h1/>
+        Team Name: <%= @name %><br>
+        Coach: <%= @coach %><br>
+        Point Guard: <%= @pg %><br>
+        Shooting Guard: <%= @sg %><br>
+        Small Forward: <%= @sf %><br>
+        Power Forward: <%= @pf %><br>
+        Center: <%= @c %><br>
  </body>
 </html>
-
-
