--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -4,7 +4,18 @@
   <meta charset="UTF-8">
   <title>Basketball Team Signup</title>
  </head>
- <body>
+  <body>
+    <form method="POST" action="/team">
+        Team name: <input type="text" name="name"><br>
+        Coach: <input type="text" name="coach"><br>
+        Point Guard: <input type="text" name="pg"><br>
+        Shooting Guard: <input type="text" name="sg"><br>
+        Small Forward: <input type="text" name="sf"><br>
+        Power Fowrard: <input type="text" name="pf"><br>
+        Center: <input type="text" name="c"><br>
+        
+        <input type="submit" id="Submit"/>
+    </form>
  </body>
 </html>
 
